Fixed iPad orientation layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -49,10 +49,28 @@ body {
   }
 }
 
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   .sidenav {
     padding-top: 15px;
     position: fixed;
+  }
+
+  .sidenav .avatar {
+    margin-top: 14px !important;
+    width: 230px !important;
+    height: auto !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .sidenav .avatar {
+    margin-top: -14px !important;
+  }
+}
+
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .main-scroll {
+    margin-left: 14px !important;
   }
 }
 
