--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,14 +1,13 @@
 .sidenav {
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .sidenav .avatar {
   width: 230px;
   height: 230px;
   overflow: hidden;
-  margin-top: -14px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  overflow: hidden;
 }
 
 .sidenav-info {
